Implement dijkstra algorithm

--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "\n",
     "import scipion_bridge\n",
     "import scipion_bridge.ffi.scipion as scipion\n",
+    "from scipion_bridge.typed import volume, common, proxy\n",
     "# from scipion_bridge.ffi.blocres import blocres\n",
     "# from scipion_bridge.proxy import OutputInfo\n",
     "\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "5057b89e-44f4-462b-a5e3-b2aac5d65f52",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "0ce8ff5a-10c8-4d51-a0eb-5fad145dd945",
    "metadata": {},
    "outputs": [
@@ -63,7 +64,7 @@
        "EMDBMetadata(pdb_id='7l70', resolution=3.1, sampling=0.835, size=256, org_x=0, org_y=0, org_z=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -98,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmphv0119gl --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpj5mt8vqb --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -106,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e1e16207f6b4e6dbeb5e1a6890d35fa",
+       "model_id": "9d65821e65e54740ae93fa1d7416ad96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -163,9 +164,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmphv0119gl.vol -o /tmp/tmpepoc_0f9.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmphv0119gl.vol\n",
-      "Output File: /tmp/tmpepoc_0f9.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpj5mt8vqb.vol -o /tmp/tmpk6al7zxy.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpj5mt8vqb.vol\n",
+      "Output File: /tmp/tmpk6al7zxy.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -173,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5ae407ebf854b4a9c50aed3c3391dd4",
+       "model_id": "f548ee9ef4ae4e5f8d5937c0401b15ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "55b1bfb4-5934-4d77-9cdc-9168b0ee7536",
    "metadata": {},
    "outputs": [
@@ -216,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a2dabe816354791879987a67e6f3f70",
+       "model_id": "4b43c6a3ddb24440a9d6af425ff96100",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,17 +247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:80: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmplfznhr4q.vol -o /tmp/tmpeqb4lp8o.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmplfznhr4q.vol\n",
-      "Output File: /tmp/tmpeqb4lp8o.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmp2iuhl8i2.vol -o /tmp/tmpyknot72d.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmp2iuhl8i2.vol\n",
+      "Output File: /tmp/tmpyknot72d.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -264,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b15917b4233b4b44bea0d1a94d80d93c",
+       "model_id": "fe7373f339f24dcf8d2e86e2c2410465",
        "version_major": 2,
        "version_minor": 0
       },
