--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "5057b89e-44f4-462b-a5e3-b2aac5d65f52",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0ce8ff5a-10c8-4d51-a0eb-5fad145dd945",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "EMDBMetadata(pdb_id='7l70', resolution=3.1, sampling=0.835, size=256, org_x=0, org_y=0, org_z=0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpj5mt8vqb --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpkiwt_du0 --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d65821e65e54740ae93fa1d7416ad96",
+       "model_id": "4f6f6e1bb26249018790bc44bdabc296",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -164,9 +164,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpj5mt8vqb.vol -o /tmp/tmpk6al7zxy.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpj5mt8vqb.vol\n",
-      "Output File: /tmp/tmpk6al7zxy.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpkiwt_du0.vol -o /tmp/tmp4cyy2vl4.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpkiwt_du0.vol\n",
+      "Output File: /tmp/tmp4cyy2vl4.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f548ee9ef4ae4e5f8d5937c0401b15ca",
+       "model_id": "8411cf3e80da4d3e9fd0b8b664f6ac92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "55b1bfb4-5934-4d77-9cdc-9168b0ee7536",
    "metadata": {},
    "outputs": [
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b43c6a3ddb24440a9d6af425ff96100",
+       "model_id": "14896dfafb0b4481b9bf8d0509496a9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:80: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:86: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
       "  warnings.warn(\n"
      ]
     },
@@ -263,9 +263,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmp2iuhl8i2.vol -o /tmp/tmpyknot72d.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmp2iuhl8i2.vol\n",
-      "Output File: /tmp/tmpyknot72d.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpoyxdxtzw.vol -o /tmp/tmp433j3ohf.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmpoyxdxtzw.vol\n",
+      "Output File: /tmp/tmp433j3ohf.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -273,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe7373f339f24dcf8d2e86e2c2410465",
+       "model_id": "a4fb0e1cc15e4c6a904682316c944b58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ed91620c-71ef-4160-8b57-99a72f7fe5d9",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "4187857"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,10 +325,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fa8327a2-cb3c-4d52-a71d-5be666c520f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'scipion_bridge.ffi.scipion' has no attribute 'xmipp_image_convert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m     scipion\u001b[38;5;241m.\u001b[39mxmipp_image_header(data, sampling\u001b[38;5;241m=\u001b[39msampling)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n\u001b[0;32m----> 7\u001b[0m volume \u001b[38;5;241m=\u001b[39m \u001b[43mapply_sampling\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvolume\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetadata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msampling\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m mask \u001b[38;5;241m=\u001b[39m apply_sampling(mask, metadata\u001b[38;5;241m.\u001b[39msampling)\n",
+      "Cell \u001b[0;32mIn[11], line 2\u001b[0m, in \u001b[0;36mapply_sampling\u001b[0;34m(data, sampling)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mapply_sampling\u001b[39m(data, sampling):\n\u001b[0;32m----> 2\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mscipion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mxmipp_image_convert\u001b[49m(data)\n\u001b[1;32m      3\u001b[0m     scipion\u001b[38;5;241m.\u001b[39mxmipp_image_header(data, sampling\u001b[38;5;241m=\u001b[39msampling)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'scipion_bridge.ffi.scipion' has no attribute 'xmipp_image_convert'"
+     ]
+    }
+   ],
    "source": [
     "def apply_sampling(data, sampling):\n",
     "    data = scipion.xmipp_image_convert(data)\n",
