Resolve with local scopes

--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -96,10 +96,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:118: UserWarning: Found ambiguous resolvers scipion_bridge.typed.proxy.resolve_proxy_to_func_param and scipion_bridge.ffi.scipion.resolve_output_to_proxy during type resolution.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpkiwt_du0 --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp1skzpnr9 --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -107,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f6f6e1bb26249018790bc44bdabc296",
+       "model_id": "7b2df2edbad3440681ee6e6edb7c7e17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "91f4d7bd-b6e0-4ba7-9548-e458105f227b",
    "metadata": {},
    "outputs": [],
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -164,9 +172,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpkiwt_du0.vol -o /tmp/tmp4cyy2vl4.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpkiwt_du0.vol\n",
-      "Output File: /tmp/tmp4cyy2vl4.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmp1skzpnr9.vol -o /tmp/tmp5cbnuxet.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmp1skzpnr9.vol\n",
+      "Output File: /tmp/tmp5cbnuxet.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -174,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8411cf3e80da4d3e9fd0b8b664f6ac92",
+       "model_id": "08c507030e804d86a9a16aef9124785e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "55b1bfb4-5934-4d77-9cdc-9168b0ee7536",
    "metadata": {},
    "outputs": [
@@ -217,14 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14896dfafb0b4481b9bf8d0509496a9b",
+       "model_id": "af914f3535064dae852ce3043d0aa52e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
@@ -255,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:86: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:173: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
       "  warnings.warn(\n"
      ]
     },
@@ -263,9 +271,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpoyxdxtzw.vol -o /tmp/tmp433j3ohf.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmpoyxdxtzw.vol\n",
-      "Output File: /tmp/tmp433j3ohf.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpu9piubi5.vol -o /tmp/tmp12fki7_p.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmpu9piubi5.vol\n",
+      "Output File: /tmp/tmp12fki7_p.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -273,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4fb0e1cc15e4c6a904682316c944b58",
+       "model_id": "0cf392fca1964df785f03e31f40c35f8",
        "version_major": 2,
        "version_minor": 0
       },
