--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:31: RuntimeWarning: Local scopes are not supported below Python 3.11; Type resolution behavior might be different.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -21,7 +30,7 @@
     "\n",
     "import scipion_bridge\n",
     "import scipion_bridge.ffi.scipion as scipion\n",
-    "from scipion_bridge.typed import volume, common, proxy\n",
+    "from scipion_bridge.typed import common, proxy\n",
     "# from scipion_bridge.ffi.blocres import blocres\n",
     "# from scipion_bridge.proxy import OutputInfo\n",
     "\n",
@@ -99,7 +108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:118: UserWarning: Found ambiguous resolvers scipion_bridge.typed.proxy.resolve_proxy_to_func_param and scipion_bridge.ffi.scipion.resolve_output_to_proxy during type resolution.\n",
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:135: UserWarning: Found ambiguous resolvers scipion_bridge.typed.proxy.resolve_proxy_to_func_param and scipion_bridge.ffi.scipion.resolve_output_to_proxy during type resolution.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -107,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp1skzpnr9 --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpf0guuj46 --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -115,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b2df2edbad3440681ee6e6edb7c7e17",
+       "model_id": "83029d6580d8442cb0ebc04291b5c42c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,9 +181,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmp1skzpnr9.vol -o /tmp/tmp5cbnuxet.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmp1skzpnr9.vol\n",
-      "Output File: /tmp/tmp5cbnuxet.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpf0guuj46.vol -o /tmp/tmpkxhdcwf7.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpf0guuj46.vol\n",
+      "Output File: /tmp/tmpkxhdcwf7.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -182,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08c507030e804d86a9a16aef9124785e",
+       "model_id": "11c2632ff23d4e3bbfa6e7190ba6b214",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af914f3535064dae852ce3043d0aa52e",
+       "model_id": "aafb66bfd1fd4e848cc1932b55a65136",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:173: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:241: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
       "  warnings.warn(\n"
      ]
     },
@@ -271,9 +280,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpu9piubi5.vol -o /tmp/tmp12fki7_p.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmpu9piubi5.vol\n",
-      "Output File: /tmp/tmp12fki7_p.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpfi3xq56m.vol -o /tmp/tmpxdl58ye5.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmpfi3xq56m.vol\n",
+      "Output File: /tmp/tmpxdl58ye5.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -281,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cf392fca1964df785f03e31f40c35f8",
+       "model_id": "51c6ffacb8214304991411da4667cece",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,141 +339,6 @@
    "source": [
     "np.count_nonzero(sphere_mask)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "fa8327a2-cb3c-4d52-a71d-5be666c520f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'scipion_bridge.ffi.scipion' has no attribute 'xmipp_image_convert'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m     scipion\u001b[38;5;241m.\u001b[39mxmipp_image_header(data, sampling\u001b[38;5;241m=\u001b[39msampling)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n\u001b[0;32m----> 7\u001b[0m volume \u001b[38;5;241m=\u001b[39m \u001b[43mapply_sampling\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvolume\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetadata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msampling\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m mask \u001b[38;5;241m=\u001b[39m apply_sampling(mask, metadata\u001b[38;5;241m.\u001b[39msampling)\n",
-      "Cell \u001b[0;32mIn[11], line 2\u001b[0m, in \u001b[0;36mapply_sampling\u001b[0;34m(data, sampling)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mapply_sampling\u001b[39m(data, sampling):\n\u001b[0;32m----> 2\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mscipion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mxmipp_image_convert\u001b[49m(data)\n\u001b[1;32m      3\u001b[0m     scipion\u001b[38;5;241m.\u001b[39mxmipp_image_header(data, sampling\u001b[38;5;241m=\u001b[39msampling)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'scipion_bridge.ffi.scipion' has no attribute 'xmipp_image_convert'"
-     ]
-    }
-   ],
-   "source": [
-    "def apply_sampling(data, sampling):\n",
-    "    data = scipion.xmipp_image_convert(data)\n",
-    "    scipion.xmipp_image_header(data, sampling=sampling)\n",
-    "\n",
-    "    return data\n",
-    "\n",
-    "volume = apply_sampling(volume, metadata.sampling)\n",
-    "mask = apply_sampling(mask, metadata.sampling)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cafd110b-d6aa-408d-854c-e82ee9e0904f",
-   "metadata": {},
-   "source": [
-    "### Compute BlocRes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "50dfc6e4-2dd2-4953-a545-b5891aca08ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[BlocRes] /home/max/scipion3/software/em/bsoft/bin/blocres  -Mask /tmp/tmpjvct5xl5.mrc -sampling 0.835 0.835 0.835 -box 18 -cutoff 0.5 -nofill -smooth -pad 1 -step 1 -maxresolution 0.5 -verbose 1 data/downloaded/emd_41510_half_map_1.map data/downloaded/emd_41510_half_map_2.map /tmp/tmpunxxt95c.map\n",
-      "# /home/max/scipion3/software/em/bsoft/bin/blocres -Mask /tmp/tmpjvct5xl5.mrc -sampling 0.835 0.835 0.835 -box 18 -cutoff 0.5 -nofill -smooth -pad 1 -step 1 -maxresolution 0.5 -verbose 1 data/downloaded/emd_41510_half_map_1.map data/downloaded/emd_41510_half_map_2.map /tmp/tmpunxxt95c.map \n",
-      "# Wed Jul 16 13:15:13 2025\n",
-      "\n",
-      "\n",
-      "Calculating local resolution:\n",
-      "Mask:                           /tmp/tmpjvct5xl5.mrc (-1)\n",
-      "Kernel size:                    18\n",
-      "Step size:                      1\n",
-      "Edge size:                      9\t9\t9\n",
-      "Padding size:                   36\n",
-      "Smoothing/tapering:             2\n",
-      "Cutoff(s):                      0.500\n",
-      "\n",
-      "Boxes to calculate:             646612\n",
-      "\n",
-      "Boxes calculated:               646612\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "blocres_half = blocres(\n",
-    "    str(map_1),\n",
-    "    str(map_2),\n",
-    "    mask=mask,\n",
-    "    sampling=f\"{metadata.sampling} {metadata.sampling} {metadata.sampling}\",\n",
-    "    box=int(metadata.resolution * 6),\n",
-    "    cutoff=0.5,\n",
-    "    step=1,\n",
-    "    verbose=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "cf7c582a-5ff0-4de0-b4fc-e4f308277cf6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[XMIPP] scipion run xmipp_pdb_label_from_volume -o /tmp/tmp7efz7quw.atom.pdb --pdb data/downloaded/pdb8tqo.ent --vol /tmp/tmpcwzph5sb.map --mask /tmp/tmpcub3ywqh.mrc --sampling 0.835 --origin 0.000000 0.000000 0.000000\n",
-      "PDB file:           data/downloaded/pdb8tqo.ent\n",
-      "Output:       /tmp/tmp7efz7quw.atom.pdb\n",
-      "Sampling rate:        0.835\n",
-      "Origin:               0.000000 0.000000 0.000000 \n",
-      "Radius:               0.8\n",
-      "mean value: = 3.2293\n",
-      "absolute mean value: = 3.2293\n",
-      "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/blocres_result_41510.pdb'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "atomic_model = scipion.xmipp_pdb_label_from_volume(\n",
-    "    pdb=str(pdb_model),\n",
-    "    volume=blocres_half,\n",
-    "    mask=mask,\n",
-    "    sampling=metadata.sampling,\n",
-    "    origin=\"%f %f %f\" % (metadata.org_x, metadata.org_y, metadata.org_z),\n",
-    ")\n",
-    "\n",
-    "shutil.copy(atomic_model.path, f\"data/blocres_result_{EMDB_ENTRY}.pdb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba5fd182-4657-4d13-a844-6b5280eb8102",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
