--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:31: RuntimeWarning: Local scopes are not supported below Python 3.11; Type resolution behavior might be different.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5057b89e-44f4-462b-a5e3-b2aac5d65f52",
    "metadata": {},
    "outputs": [],
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0ce8ff5a-10c8-4d51-a0eb-5fad145dd945",
    "metadata": {},
    "outputs": [
@@ -73,7 +64,7 @@
        "EMDBMetadata(pdb_id='7l70', resolution=3.1, sampling=0.835, size=256, org_x=0, org_y=0, org_z=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,23 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:135: UserWarning: Found ambiguous resolvers scipion_bridge.typed.proxy.resolve_proxy_to_func_param and scipion_bridge.ffi.scipion.resolve_output_to_proxy during type resolution.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpf0guuj46 --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpz7dumee3 --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -124,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83029d6580d8442cb0ebc04291b5c42c",
+       "model_id": "9c48fd63e013477dac5fbc5f7d4472f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "91f4d7bd-b6e0-4ba7-9548-e458105f227b",
    "metadata": {},
    "outputs": [],
@@ -173,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -181,9 +164,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpf0guuj46.vol -o /tmp/tmpkxhdcwf7.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpf0guuj46.vol\n",
-      "Output File: /tmp/tmpkxhdcwf7.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpgofzsvue.vol -o /tmp/tmpmkxpc76l.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpgofzsvue.vol\n",
+      "Output File: /tmp/tmpmkxpc76l.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -191,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11c2632ff23d4e3bbfa6e7190ba6b214",
+       "model_id": "ccd8b837884c4ee78eed809c9dd96e47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "55b1bfb4-5934-4d77-9cdc-9168b0ee7536",
    "metadata": {},
    "outputs": [
@@ -234,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aafb66bfd1fd4e848cc1932b55a65136",
+       "model_id": "04b3445ee6d445198413d4216d6721d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,25 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/max/Documents/scipion-bridge/src/scipion_bridge/typed/resolve.py:241: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpfi3xq56m.vol -o /tmp/tmpxdl58ye5.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmpfi3xq56m.vol\n",
-      "Output File: /tmp/tmpxdl58ye5.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmphm_0h7kv.vol -o /tmp/tmpr8w0zkdx.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmphm_0h7kv.vol\n",
+      "Output File: /tmp/tmpr8w0zkdx.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -290,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51c6ffacb8214304991411da4667cece",
+       "model_id": "38773f4af8f04c6e8c9b9bbc8e63ff6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,6 +314,45 @@
    "source": [
     "np.count_nonzero(sphere_mask)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6a64ac34-25d3-41d7-978d-efe55945f5c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 42 # Global scope\n",
+    "\n",
+    "def foo(x):\n",
+    "    print(x) # Local scope\n",
+    "\n",
+    "foo(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "822b9c90-3ec0-44dc-8953-6c837b8d0426",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dd359ce-ad06-47ae-b679-c9d8c2e86464",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
