Update demo notebook

--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
@@ -21,14 +21,14 @@
     "\n",
     "import scipion_bridge\n",
     "import scipion_bridge.ffi.scipion as scipion\n",
-    "from scipion_bridge.typed import common, proxy\n",
+    "from scipion_bridge.core.typed import common, proxy\n",
     "# from scipion_bridge.ffi.blocres import blocres\n",
     "# from scipion_bridge.proxy import OutputInfo\n",
     "\n",
     "import shutil\n",
     "\n",
     "from utils import download as D\n",
-    "scipion_bridge.utils.environment.configure_default_env()\n",
+    "scipion_bridge.core.environment.configure_default_env()\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5057b89e-44f4-462b-a5e3-b2aac5d65f52",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0ce8ff5a-10c8-4d51-a0eb-5fad145dd945",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "EMDBMetadata(pdb_id='7l70', resolution=3.1, sampling=0.835, size=256, org_x=0, org_y=0, org_z=0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpz7dumee3 --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp2puw8rqj --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c48fd63e013477dac5fbc5f7d4472f9",
+       "model_id": "9154dd23925c4fee8df52ff4af4c746e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +125,7 @@
     "    center_pdb=\"-v 0\",\n",
     "    sampling=metadata.sampling,\n",
     "    size=metadata.size,\n",
-    ").typed(astype=scipion_bridge.typed.volume.SpiderFile, copy_data=False)\n",
+    ").typed(astype=scipion_bridge.core.typed.volume.SpiderFile, copy_data=False)\n",
     "\n",
     "# volume = scipion.xmipp_volume_align(\n",
     "#     embdb_map=emdb_map,\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -164,9 +164,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpgofzsvue.vol -o /tmp/tmpmkxpc76l.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpgofzsvue.vol\n",
-      "Output File: /tmp/tmpmkxpc76l.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmp2puw8rqj.vol -o /tmp/tmpxarl4c9g.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmp2puw8rqj.vol\n",
+      "Output File: /tmp/tmpxarl4c9g.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccd8b837884c4ee78eed809c9dd96e47",
+       "model_id": "4cd02ec6996c460a9d3bcd5fd9b6b20f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "55b1bfb4-5934-4d77-9cdc-9168b0ee7536",
    "metadata": {},
    "outputs": [
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04b3445ee6d445198413d4216d6721d3",
+       "model_id": "99cd9819031d4ec19ca74c0e4bdd8e01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,17 +247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/Documents/scipion-bridge/src/scipion_bridge/core/typed/resolve.py:241: UserWarning: Attempted register a resolver for existing transform 'ndarray' -> 'SpiderFile' ('resolve_output_to_proxy' vs 'resolve_output_to_proxy')\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmphm_0h7kv.vol -o /tmp/tmpr8w0zkdx.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmphm_0h7kv.vol\n",
-      "Output File: /tmp/tmpr8w0zkdx.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpy2jhuv7s.vol -o /tmp/tmpcdj12_jj.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmpy2jhuv7s.vol\n",
+      "Output File: /tmp/tmpcdj12_jj.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -265,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38773f4af8f04c6e8c9b9bbc8e63ff6a",
+       "model_id": "267e5ee4d52b47488361969ce4d14628",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "ed91620c-71ef-4160-8b57-99a72f7fe5d9",
    "metadata": {},
    "outputs": [
@@ -306,7 +314,7 @@
        "4187857"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,45 +322,6 @@
    "source": [
     "np.count_nonzero(sphere_mask)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6a64ac34-25d3-41d7-978d-efe55945f5c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 42 # Global scope\n",
-    "\n",
-    "def foo(x):\n",
-    "    print(x) # Local scope\n",
-    "\n",
-    "foo(\"Hello World\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "822b9c90-3ec0-44dc-8953-6c837b8d0426",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3dd359ce-ad06-47ae-b679-c9d8c2e86464",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
